fixed nyc being off center

--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -108,13 +108,13 @@ button:hover {
     justify-content: space-between;
   }
   .left-side {
-    width: 80%;
+    width: auto;
     display: flex;
-    justify-content: space-around;
     align-items: center;
   }
   .left-side h1 {
     text-align: center;
+    padding-left: 0rem;
     padding-top: 0.5rem;
     padding-bottom: 0rem;
   }
