--- a/scss/main.css
+++ b/scss/main.css
@@ -159,18 +159,17 @@ button:hover {
             justify-content: space-between;
   }
   .left-side {
-    width: 80%;
+    width: auto;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -ms-flex-pack: distribute;
-        justify-content: space-around;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
   }
   .left-side h1 {
     text-align: center;
+    padding-left: 0rem;
     padding-top: 0.5rem;
     padding-bottom: 0rem;
   }
